--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.form-control{
+    @apply w-full  p-2 border rounded bg-gray-200 focus:border-2 
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.btn-page {
+    @apply bg-gray-400  rounded-md before:odd:shadow-md text-white  hover:bg-gray-700 px-4 py-1  items-center text-center border
+
+}
+
+.btn-primary {
+    @apply bg-blue-800  rounded-md before:odd:shadow-md text-white  hover:bg-blue-500 px-4 py-1  items-center text-center border
+
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    max-width: 1366px; /* Define el ancho máximo que desees */
+    margin: 0 auto; /* Centra el contenido horizontalmente */
 }
